# fastapi-s

./: .env.example  .gitignore  Makefile  main.py  pyproject.toml  pyrightconfig.json
apps/web-service/: alembic.ini  pyproject.toml
apps/web-service/app/: main.py
apps/web-service/app/api/: categories.py  items.py  products.py  skus.py  welcome.py
apps/web-service/app/core/: config.py  database.py  openapi.py
apps/web-service/app/core/middleware/: __init__.py  cors.py  process_time.py  response.py
apps/web-service/app/exception/: __init__.py  base.py  database.py  not_found.py
apps/web-service/app/exception/handler/: docs.py  errors.py  handlers.py
apps/web-service/app/model/: __init__.py  base.py  category.py  product.py  sku.py
apps/web-service/app/model/association/: __init__.py  product_category.py
apps/web-service/app/schema/: category.py  item.py  product.py  sku.py
apps/web-service/app/service/: base.py  category_service.py  main.py  product_service.py  sku_service.py
apps/web-service/migrations/: env.py
apps/web-service/migrations/versions/: 7420a55a3e20_.py
apps/web-service/test/: conftest.py
apps/web-service/test/integration/: test_categories.py  test_products.py  test_skus.py
